# splash

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: profiles.json  user_profile.json
src/linkedin_scraper/: __init__.py  ai_analyzer.py  analyzer.py  cli.py  generator.py  models.py  questionnaire.py  scraper.py
web/: package-lock.json  package.json  vercel.json
web/src/app/: layout.tsx  page.tsx
web/src/app/api/analyze/: route.ts
web/src/app/api/chat/: route.ts
web/src/app/api/env-status/: route.ts
web/src/app/api/generate/: route.ts
web/src/app/api/scrape/: route.ts
web/src/app/api/scrape-status/: route.ts
web/src/app/api/user-profile/: route.ts
web/src/components/: Chat.tsx  ConfigureProfiles.tsx  GeneratePosts.tsx  Interview.tsx  ScrapeAnalyze.tsx  Settings.tsx
web/src/lib/: storage.ts  types.ts
