[project]
name = "linkedin-scraper-ai"
version = "0.1.0"
description = "Automated LinkedIn content pipeline: scrape top voices, analyze patterns, generate personalized posts"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "apify-client>=1.8.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
linkedin-ai = "linkedin_scraper.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
